Added Registration and Login Page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -85,7 +85,7 @@
 				<li><a href="#portfolio" class="smoothScroll">GALLERY</a></li>
 				<li><a href="#plan" class="smoothScroll">PLANS</a></li>
 				<li><a href="#contact" class="smoothScroll">CONTACT</a></li>
-				<li><a data-toggle="modal" class="smoothScroll" href="#login-overlay">LOGIN</a></li>
+				<li><a class="smoothScroll" href="login">LOGIN</a></li>
 			</ul>
 		</div>
 
