--- a/src/main/resources/static/css/default.css
+++ b/src/main/resources/static/css/default.css
@@ -1,203 +1,31 @@
-*/*Set's border, padding and margin to 0 for all values*/
-{
-    padding: 0;
-    margin: 0;
-    border: 0;
-}
-body, html {
-    color: #373C40;
-    font-family: Verdana,Arial, Helvetica, sans-serif;
-    height: 100%;
-    
-    background-color: #f0f0f0;
-    margin:10px;
-}
-body {
-    font-size: 70%;
-    
-}
-a.smoothScroll:HOVER {
-    color: green;
-}
-p {
-    padding: 7px 0 7px 0;
-    font-weight: 500;
-    font-size: 15pt;
-}
-a {
-    color: #656565;
-    text-decoration:none;
-}
-a:hover{
-    color: #abda0f;
-    text-decoration: none;
-}
-h1 {
-    font-weight:200;
-    color: #888888;
-    font-size:16pt;
-    background: transparent url(../images/reg/h1.png) no-repeat center left;
-    padding-left:33px;
-    margin:7px 5px 8px 8px;
-}
-h4 {
-    padding:1px;
-    color: #ACACAC;
-    font-size:9pt;
-    font-weight:100;
-    text-transform:uppercase;
-}
-form.register{
-    width:800px;
-    margin: 20px auto 0px auto;
+
+.register{
+    width:auto;
+    text-align:center;
     margin-top: 80px;
-    height:550px;
-    background-color:#fff;
-    padding:5px;
-    -moz-border-radius:20px;
-    -webkit-border-radius:20px;
-}
-form p{
-    font-size: 10pt;
-    clear:both;
-    margin: 0;
-    color:gray;
-    padding:4px;
-}
-form sup{
-   color:red;
-   font-size:10pt;
-}
-form.register fieldset.row1
-{
-    width:770px;
-    padding:5px;
-    float:left;
-    border-top:1px solid #F5F5F5;
-    margin-bottom:15px;
-}
-form.register fieldset.row1 label{
-    width:140px;
-    float: left;
-    text-align: right;
-    margin-right: 6px;
-    margin-top:2px;
-}
-form.register fieldset.row2
-{
-    border-top:1px solid #F1F1F1;
-    border-right:1px solid #F1F1F1;
-    padding:5px;
-    width:350px;
-    float:left;
-}
-form.register fieldset.row3
-{
-    border-top:1px solid #F1F1F1;
-    padding:5px;
-    float:left;
-    margin-bottom:15px;
-    width:400px;
-}
-form.register legend
-{
-    color: #abda0f;
-    padding:2px;
-    margin-left: 14px;
-    font-weight:bold;
-    font-size: 14px;
-    font-weight:100;
-}
-form.register label{
-    color:#444;
-    width:98px;
-    float: left;
-    text-align: right;
-    margin-right: 6px;
-    margin-top:5px;
-}
-form.register label.optional{
-    float: left;
-    text-align: right;
-    margin-right: 6px;
-    margin-top:2px;
-    color: #A3A3A3;
-}
-form.register label.obinfo{
-    float:right;
-    padding:3px;
-    font-style:italic;
-}
-form.register input{
-    width: 180px;
-    color: #505050;
-    float: left;
-    margin-right: 5px;
-}
-form.register textarea{
-    width: 180px;
-    color: #505050;
-    float: left;
-    margin-right: 5px;
-}
-form.register input.long{
-    width: 247px;
-    color: #505050;
-}
-form.register input.short{
-    width: 40px;
-    color: #505050;
+    height:auto;
+    float:inherit;
+    background-color:white;
+    padding:40px;
 }
 
-.button
-{
-    background: #abda0f url(../img/overlay.png) repeat-x;
-    padding: 8px 10px 8px;
-    color: #fff;
-    text-decoration: none;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-    -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-    text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
-    cursor: pointer;
-    float:left;
-    font-size:18px;
-    margin:10px;
+.navbar{
+	background-color: black;
 }
-
-form.register input[type=reset] {
-    width:100px;
-    color:white;
+/* Credit to bootsnipp.com for the css for the color graph */
+.colorgraph {
+  height: 5px;
+  border-top: 0;
+  width:100%;
+  background: #c4e17f;
+  border-radius: 5px;
+  background-image: -webkit-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
+  background-image: -moz-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
+  background-image: -o-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
+  background-image: linear-gradient(to right, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
 }
-
-form.register input[type=checkbox] {
-    width:14px;
-    margin-top:4px;
+.footer {
+	padding-top: 20px;
+	height: 80px;
+	background-color: #babdb6;
 }
-
-form.register select
-{
-    border: 1px solid #E1E1E1;
-    width: 180px;
-    float:left;
-    margin-bottom:3px;
-    color: #505050;
-    margin-right:5px;
-}
-
-input:focus, select:focus{
-    background-color: #efffe0;
-}
-
-p.agreement{
-    margin-left:15px;
-}
-p.agreement label{
-    width:390px;
-    text-align:left;
-    margin-top:3px;
-}
-
-
-
