--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
-
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 <!-- Template site title
    ================================================== -->
 <title>Bicycle Sharing</title>
-
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="keywords" content="" />
@@ -24,17 +20,14 @@
 <!-- Main CSS
    	================================================== -->
 <link rel="stylesheet" href="css/style.css" />
-
 <link rel="stylesheet" type="text/css" href="css/default.css" />
 <!-- Google web font
    ================================================== -->
 <link href='https://fonts.googleapis.com/css?family=Raleway:700'
 	rel='stylesheet' type='text/css' />
-
 </head>
 
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
-
 	<!-- Navigation section
 ================================================== -->
 	<section class="navbar navbar-fixed-top custom-navbar"
@@ -52,7 +45,6 @@
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-
 					<li><a href="index.html#home" class="smoothScroll">HOME</a></li>
 					<li><a href="index.html#work" class="smoothScroll">HOW IT WORKS</a></li>
 					<li><a href="index.html#about" class="smoothScroll">ABOUT</a></li>
@@ -61,15 +53,14 @@
 					<li><a href="index.html#contact" class="smoothScroll">CONTACT</a></li>
 				</ul>
 			</div>
-
 		</div>
 	</section>
 
+<!-- form start -->
 	<form action="#" th:action="@{/register}" th:object="${userData}"
 		method="post">
 		<div class="register">
 			<div class="container">
-
 				<div class="row">
 					<div
 						class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
@@ -150,7 +141,8 @@
 						</div>
 						<div class="form-group">
 							<textarea name="userAddress" class="form-control input-lg"
-								placeholder="Enter Address" tabindex="3" rows="5" required="required"></textarea>
+								placeholder="Enter Address" tabindex="3" rows="5"
+								required="required"></textarea>
 						</div>
 						<div class="row">
 							<div class="col-md-3">
@@ -165,7 +157,6 @@
 									Conditions</a> set out by this site.
 							</div>
 						</div>
-
 						<hr class="colorgraph" />
 						<div class="row">
 							<div class="col-md-6">
@@ -173,10 +164,9 @@
 									class="btn btn-primary btn-block btn-lg" tabindex="7" />
 							</div>
 							<div class="col-md-6">
-								<a href="login">
-						<input type="button" value="Sign In"
-								class="btn btn-success btn-block btn-lg" tabindex="7" />
-							</a>
+								<a href="login"> <input type="button" value="Sign In"
+									class="btn btn-success btn-block btn-lg" tabindex="7" />
+								</a>
 							</div>
 						</div>
 					</div>
@@ -207,27 +197,29 @@
 			</div>
 		</div>
 	</form>
+	<!-- form end -->
+	
 	<div class="footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3" align="left">
-					<h4>Copyright <a href="#index.html#home">Bicycle Sharing</a> </h4>
+					<h4>
+						Copyright <a href="#index.html#home">Bicycle Sharing</a>
+					</h4>
 				</div>
 				<div class="col-md-6"></div>
 				<div class="col-md-3" align="right">
-					<h4>Developed by <a href="index.html#home">Java Interns</a> </h4>
+					<h4>
+						Developed by <a href="index.html#home">Java Interns</a>
+					</h4>
 				</div>
 			</div>
 		</div>
 	</div>
+	
 	<script src="js/jquery.js" th:src="@{js/jquery.js}"></script>
 	<script src="js/bootstrap.min.js" th:src="@{js/bootstrap.min.js}"></script>
 	<script src="js/smoothscroll.js" th:src="@{js/smoothscroll.js}"></script>
 	<script src="/js/common.js" th:src="@{/js/common.js}"></script>
 </body>
 </html>
-
-
-
-
-
