--- a/src/main/resources/templates/signIn.html
+++ b/src/main/resources/templates/signIn.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
-
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
-
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 <!-- Template site title
@@ -24,13 +21,12 @@
 <!-- Main CSS
    	================================================== -->
 <link rel="stylesheet" href="css/style.css" />
-
 <link rel="stylesheet" type="text/css" href="css/default.css" />
+
 <!-- Google web font
    ================================================== -->
 <link href='https://fonts.googleapis.com/css?family=Raleway:700'
 	rel='stylesheet' type='text/css' />
-
 </head>
 
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
@@ -40,7 +36,6 @@
 	<section class="navbar navbar-fixed-top custom-navbar"
 		role="navigation">
 		<div class="container">
-
 			<div class="navbar-header">
 				<button class="navbar-toggle" data-toggle="collapse"
 					data-target=".navbar-collapse">
@@ -52,7 +47,6 @@
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-
 					<li><a href="index.html#home" class="smoothScroll">HOME</a></li>
 					<li><a href="index.html#work" class="smoothScroll">HOW IT
 							WORKS</a></li>
@@ -62,18 +56,15 @@
 					<li><a href="index.html#contact" class="smoothScroll">CONTACT</a></li>
 				</ul>
 			</div>
-
 		</div>
 	</section>
 	<div class="register">
 		<div class="container">
-
 			<div class="row">
 				<div
 					class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
 					<h2>Please Sign In</h2>
 					<hr class="colorgraph"></hr>
-
 					<div class="form-group">
 						<input type="email" name="userEmail" class="form-control input-lg"
 							placeholder="Enter Email Id" tabindex="3"
@@ -86,10 +77,11 @@
 							tabindex="3" required="required" />
 					</div>
 
-					<span class="button-checkbox pull-left"> <input type="checkbox"
-						name="remember_me" id="remember_me" /> Remember	Me 
-					</span>
-					<span><a href="" class="btn btn-link pull-right" style="font-size: 1.1em">Forgot Password?</a></span>
+					<span class="button-checkbox pull-left"> <input
+						type="checkbox" name="remember_me" id="remember_me" /> Remember
+						Me
+					</span> <span><a href="" class="btn btn-link pull-right"
+						style="font-size: 1.1em">Forgot Password?</a></span>
 					<hr class="colorgraph" />
 					<div class="row">
 						<div class="col-md-6">
@@ -106,29 +98,30 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div style="height: 110px"></div>
-	
+
 	<div class="footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3" align="left">
-					<h4>Copyright <a href="#index.html#home">Bicycle Sharing</a> </h4>
+					<h4>
+						Copyright <a href="#index.html#home">Bicycle Sharing</a>
+					</h4>
 				</div>
 				<div class="col-md-6"></div>
 				<div class="col-md-3" align="right">
-					<h4>Developed by <a href="index.html#home">Java Interns</a> </h4>
+					<h4>
+						Developed by <a href="index.html#home">Java Interns</a>
+					</h4>
 				</div>
 			</div>
 		</div>
 	</div>
+	
+	<!-- javascript  -->
 	<script src="js/jquery.js" th:src="@{js/jquery.js}"></script>
 	<script src="js/bootstrap.min.js" th:src="@{js/bootstrap.min.js}"></script>
 	<script src="js/smoothscroll.js" th:src="@{js/smoothscroll.js}"></script>
 </body>
 </html>
-
-
-
-
-
