User registration through email verification added.

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -40,7 +40,7 @@
 					<span class="icon icon-bar"></span> <span class="icon icon-bar"></span>
 					<span class="icon icon-bar"></span>
 				</button>
-				<a href="#home" class="smoothScroll navbar-brand">BICYCLE
+				<a href="index.html#home" class="smoothScroll navbar-brand">BICYCLE
 					SHARING</a>
 			</div>
 			<div class="collapse navbar-collapse">
@@ -69,7 +69,7 @@
 						<div class="row">
 							<div class="col-md-6">
 								<div class="form-group">
-									<input type="text" name="first_name"
+									<input type="text" name="firstName"
 										class="form-control input-lg" placeholder="First Name"
 										tabindex="1" required="required" />
 								</div>
