Added Security Config and made changes on how user role is stored.

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -199,6 +199,8 @@
 	</form>
 	<!-- form end -->
 	
+	<div style="height: 110px"></div>
+	
 	<div class="footer">
 		<div class="container">
 			<div class="row">
