--- a/src/main/resources/templates/forgotPassword.html
+++ b/src/main/resources/templates/forgotPassword.html
@@ -60,63 +60,43 @@
 	</section>
 	<div class="register">
 		<div class="container">
+		<form action="#" th:action="@{/afterForgotPassword}" th:object="${forgotPasswordData}" method="post">
 			<div class="row">
-				<form action="#" th:action="@{/login}" th:object="${loginData}"
-					method="post">
-					<div
-						class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-						<h2>Please Sign In</h2>
-						<hr class="colorgraph"></hr>
-						<div class="form-group">
-							<input type="email" name="email" th:field="*{email}"
-								class="form-control input-lg" placeholder="Enter Email Id"
-								tabindex="3" title="Enter Valid Email Id" required="required" />
-						</div>
-
-						<div class="form-group">
-							<input type="password" name="password" th:field="*{password}"
-								class="form-control input-lg" placeholder="Enter Password"
-								tabindex="3" required="required" />
-						</div>
-
-						<div>
-							<span class="button-checkbox pull-left"> <input
-								type="checkbox" name="remember_me" id="remember_me" /> Remember
-								Me
-							</span> <span><a href="forgotPassword" class="btn btn-link pull-right"
-								style="font-size: 1.1em">Forgot Password?</a></span>
-						</div>
-						<br />
-						<hr class="colorgraph" />
-						<div class="row">
-							<div class="col-md-6">
-								<input type="submit" value="Login"
-									class="btn btn-primary btn-block btn-lg" tabindex="7" />
-							</div>
-							<div class="col-md-6">
-								<a href="register"> <input type="button" value="Register"
-									class="btn btn-success btn-block btn-lg" tabindex="7" />
-								</a>
-							</div>
+				<div
+					class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+					<h2>Please Enter Your Email</h2>
+					<hr class="colorgraph"></hr>
+					<div class="form-group">
+						<input type="email" name="email"
+							class="form-control input-lg" placeholder="Enter Your Email"
+							tabindex="3" required="required" />
+					</div>
+					
+					<hr class="colorgraph" />
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3">
+							<input type="submit" value="Reset Password"
+								class="btn btn-primary btn-block btn-lg" tabindex="7" />
 						</div>
 					</div>
-				</form>
+				</div>
 			</div>
+			</form>
 		</div>
 	</div>
 
 	<div style="height: 110px"></div>
 
-	<div class="foot">
-		<div class="footer">
-			<div class="container">
-				<div class="col-md-3 col-sm-3 col-xs-3" align="left">
+	<div class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3" align="left">
 					<h4>
 						Copyright <a href="#index.html#home">Bicycle Sharing</a>
 					</h4>
 				</div>
-				<div class="col-md-6 col-sm-6 col-xs-6"></div>
-				<div class="col-md-3 col-sm-3 col-xs-3" align="right">
+				<div class="col-md-6"></div>
+				<div class="col-md-3" align="right">
 					<h4>
 						Developed by <a href="index.html#home">Java Interns</a>
 					</h4>
