--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <!-- Template site title
@@ -65,7 +66,7 @@
 	<section class="preloader">
 		<div class="sk-rotating-plane"></div>
 	</section>
-	
+
 	<!-- Navigation section
 ================================================== -->
 	<section class="navbar navbar-fixed-top custom-navbar"
@@ -77,7 +78,8 @@
 					<span class="icon icon-bar"></span> <span class="icon icon-bar"></span>
 					<span class="icon icon-bar"></span>
 				</button>
-				<a href="#home" class="smoothScroll navbar-brand">BICYCLE SHARING</a>
+				<a href="#home" class="smoothScroll navbar-brand">BICYCLE
+					SHARING</a>
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
@@ -88,7 +90,19 @@
 					<li><a href="#portfolio" class="smoothScroll">GALLERY</a></li>
 					<li><a href="#plan" class="smoothScroll">PLANS</a></li>
 					<li><a href="#contact" class="smoothScroll">CONTACT</a></li>
-					<li><a class="smoothScroll" href="login">LOGIN</a></li>
+					<li sec:authorize="isAnonymous()"><a class="smoothScroll"
+						href="login">LOGIN</a></li>
+					<li class="dropdown pull-right"
+						sec:authorize="isAuthenticated()"><a href="#"
+						data-toggle="dropdown" class="dropdown-toggle"><i
+							class="fa fa-user fa-fw"></i><span sec:authentication="name">[USERNAME]</span><strong
+							class="caret"></strong></a>
+						<ul class="dropdown-menu">
+							<li><a href="userProfile" style="color: black;">View Profile</a></li>
+							<li><a href="changePassword" style="color: black;">Change Password</a></li>
+							<li class="divider"></li>
+							<li><a href="logout" style="color: black;">Logout</a></li>
+						</ul></li>
 				</ul>
 			</div>
 		</div>
@@ -269,7 +283,7 @@
 							the service.</p>
 					</div>
 				</div>
-				
+
 				<!-- Work Owl Carousel section
 			================================================== -->
 				<div id="owl-work" class="owl-carousel">
@@ -405,7 +419,7 @@
 										Respect Your Privacy </a>
 								</h4>
 							</div>
-							
+
 							<div id="collapseTwo" class="panel-collapse collapse"
 								role="tabpanel" aria-labelledby="headingTwo">
 								<div class="panel-body">
@@ -638,7 +652,7 @@
 			</div>
 		</div>
 	</section>
-	
+
 	<!-- Contact section
 ================================================== -->
 	<section id="contact" class="parallax-section">
