Added new mapping for error pages

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -206,7 +206,7 @@
 			<div class="row">
 				<div class="col-md-3" align="left">
 					<h4>
-						Copyright <a href="#index.html#home">Bicycle Sharing</a>
+						Copyright <a href="index.html#home">Bicycle Sharing</a>
 					</h4>
 				</div>
 				<div class="col-md-6"></div>
