--- a/src/main/resources/templates/signIn.html
+++ b/src/main/resources/templates/signIn.html
@@ -112,7 +112,7 @@
 			<div class="container">
 				<div class="col-md-3 col-sm-3 col-xs-3" align="left">
 					<h4>
-						Copyright <a href="#index.html#home">Bicycle Sharing</a>
+						Copyright <a href="index.html#home">Bicycle Sharing</a>
 					</h4>
 				</div>
 				<div class="col-md-6 col-sm-6 col-xs-6"></div>
