Added client side validation on change password and set password page

--- a/src/main/resources/templates/setPassword.html
+++ b/src/main/resources/templates/setPassword.html
@@ -60,32 +60,35 @@
 	</section>
 	<div class="register">
 		<div class="container">
-		<form action="#" th:action="@{/afterSetPassword}" th:object="${setPasswordData}" method="post">
-			<div class="row">
-				<div
-					class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-					<h2>Please set your Password</h2>
-					<hr class="colorgraph"></hr>
-					<div class="form-group">
-						<input type="password" name="password"
-							class="form-control input-lg" placeholder="Enter Password"
-							tabindex="3" required="required" />
-					</div>
-					<div class="inputDiv">
-						<input type="password" class="form-control input-lg" name="cnfPassword"
-							placeholder="Enter Confirm Password" />
-					</div>
-					<input type="hidden" th:value="${user.email}" name="email" />
+			<form action="#" th:action="@{/afterSetPassword}"
+				th:object="${setPasswordData}" method="post" onsubmit="return passwordFunction(this);">
+				<div class="row">
+					<div
+						class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+						<h2>Please set your Password</h2>
+						<hr class="colorgraph"></hr>
+						<div class="form-group">
+							<input type="password" name="password" id="password"
+								class="form-control input-lg" placeholder="Enter Password"
+								tabindex="3" required="required" />
+						</div>
+						<span class="text-danger pull-left" id="error_id"></span>
+						<div class="inputDiv">
+							<input type="password" class="form-control input-lg"
+								id="password_confirm" name="cnfPassword"
+								placeholder="Enter Confirm Password" />
+						</div>
+						<input type="hidden" th:value="${user.email}" name="email" />
 
-					<hr class="colorgraph" />
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3">
-							<input type="submit" value="Set Password"
-								class="btn btn-primary btn-block btn-lg" tabindex="7" />
+						<hr class="colorgraph" />
+						<div class="row">
+							<div class="col-md-6 col-md-offset-3">
+								<input type="submit" value="Set Password"
+									class="btn btn-primary btn-block btn-lg" tabindex="7" />
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
 			</form>
 		</div>
 	</div>
@@ -114,5 +117,6 @@
 	<script src="js/jquery.js" th:src="@{js/jquery.js}"></script>
 	<script src="js/bootstrap.min.js" th:src="@{js/bootstrap.min.js}"></script>
 	<script src="js/smoothscroll.js" th:src="@{js/smoothscroll.js}"></script>
+	<script src="js/custom.js" th:src="@{js/custom.js}"></script>
 </body>
 </html>
