--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -74,7 +74,7 @@
 	<div class="register">
 		<div class="container">
 			<form action="#" th:action="@{/afterChangePassword}"
-				th:object="${changePasswordData}" method="post">
+				th:object="${changePasswordData}" method="post" onsubmit="return passwordFunction(this);">
 				<div class="row">
 					<div
 						class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
@@ -86,12 +86,13 @@
 								tabindex="3" required="required" />
 						</div>
 						<div class="form-group">
-							<input type="password" name="newPassword"
+							<input type="password" name="newPassword" id="password"
 								class="form-control input-lg" placeholder="Enter New Password"
 								tabindex="3" required="required" />
 						</div>
+						<span class="text-danger pull-left" id="error_id"></span>
 						<div class="inputDiv">
-							<input type="password" class="form-control input-lg"
+							<input type="password" class="form-control input-lg" id="password_confirm"
 								name="cnfPassword" placeholder="Confirm New Password" />
 						</div>
 
@@ -132,5 +133,6 @@
 	<script src="js/jquery.js" th:src="@{js/jquery.js}"></script>
 	<script src="js/bootstrap.min.js" th:src="@{js/bootstrap.min.js}"></script>
 	<script src="js/smoothscroll.js" th:src="@{js/smoothscroll.js}"></script>
+	<script src="js/custom.js" th:src="@{js/custom.js}"></script>
 </body>
 </html>
