--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -19,6 +19,13 @@
 <link rel="stylesheet" href="css/nivo-lightbox.css" />
 <link rel="stylesheet" href="css/nivo_themes/default/default.css" />
 
+<!-- Font Icons
+   ================================================== -->
+<link rel="stylesheet" href="css/font-awesome.min.css"
+	th:href="@{css/font-awesome.min.css}" />
+<link rel="stylesheet" href="css/et-line-font.css"
+	th:href="@{css/et-line-font.css}" />
+
 <!-- Main CSS
    	================================================== -->
 <link rel="stylesheet" href="css/style.css" />
@@ -57,15 +64,18 @@
 					<li><a href="index.html#contact" class="smoothScroll">CONTACT</a></li>
 					<li class="dropdown pull-right" sec:authorize="isAuthenticated()"><a
 						href="#" data-toggle="dropdown" class="dropdown-toggle"><i
-							class="fa fa-user fa-fw"></i><span sec:authentication="name">[USERNAME]</span><strong
+							class="fa fa-user fa-fw"></i><span>ACCOUNT</span><strong
 							class="caret"></strong></a>
 						<ul class="dropdown-menu">
-							<li><a href="userProfile" style="color: black;">View
-									Profile</a></li>
-							<li><a href="changePassword" style="color: black;">Change
-									Password</a></li>
+							<li><a href="userProfile" style="color: black;"><i
+									class="fa fa-user fa-fw"></i>View Profile<br /> [<small
+									sec:authentication="name">[email]</small>] </a></li>
 							<li class="divider"></li>
-							<li><a href="logout" style="color: black;">Log-out</a></li>
+							<li><a href="changePassword" style="color: black;"><i
+									class="fa fa-gear fa-fw"></i>Change Password</a></li>
+							<li class="divider"></li>
+							<li><a href="logout" style="color: black;"><i
+									class="fa fa-sign-out fa-fw"></i>Logout</a></li>
 						</ul></li>
 				</ul>
 			</div>
