Added Payment on Registration Service

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -604,12 +604,11 @@
 						</div>
 						<ul class="plan-list">
 							<li><strong>₹100 wallet balance</strong></li>
-							<li>Explore Forest</li>
+							<li>Explore the city</li>
 							<li>Visit anywhere in bhubaneswar</li>
-							<li>Group of 10 people</li>
 						</ul>
 						<div class="plan-button">
-							<button class="btn btn-default">CHOOSE PLAN</button>
+							<a href="register.html?plan=1"><button class="btn btn-default">CHOOSE PLAN</button></a>
 						</div>
 					</div>
 				</div>
@@ -624,12 +623,11 @@
 						</div>
 						<ul class="plan-list">
 							<li><strong>₹220 wallet balance</strong></li>
-							<li>Explore Mountains</li>
-							<li>Touring Villages</li>
-							<li>Group of 15 people</li>
+							<li>Take a ride anywhere</li>
+							<li>Make your plans</li>
 						</ul>
 						<div class="plan-button">
-							<button class="btn btn-default">CHOOSE PLAN</button>
+							<a href="register.html?plan=2"><button class="btn btn-default">CHOOSE PLAN</button></a>
 						</div>
 					</div>
 				</div>
@@ -644,12 +642,11 @@
 						</div>
 						<ul class="plan-list">
 							<li><strong>₹345 wallet balance</strong></li>
-							<li>Multiple Cities</li>
+							<li>Faster recharge</li>
 							<li>Unique Experiences</li>
-							<li>Group of 20 people</li>
 						</ul>
 						<div class="plan-button">
-							<button class="btn btn-default">CHOOSE PLAN</button>
+							<a href="register.html?plan=3"><button class="btn btn-default">CHOOSE PLAN</button></a>
 						</div>
 					</div>
 				</div>
