--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -60,28 +60,25 @@
 	</section>
 	<div class="register">
 		<div class="container">
-			<form action="#" th:action="@{/afterForgotPassword}"
-				th:object="${forgotPasswordData}" method="post">
-				<div class="row">
-					<div
-						class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-						<h1 style="color: red">Access Denied !</h1>
-						<hr class="colorgraph"></hr>
-						<div class="form-group">
-							<h3>You do not have permissions to view this page !</h3>
-						</div>
+			<div class="row">
+				<div
+					class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+					<h1 style="color: red">Access Denied !</h1>
+					<hr class="colorgraph"></hr>
+					<div class="form-group">
+						<h3>You do not have permissions to view this page !</h3>
+					</div>
 
-						<hr class="colorgraph" />
-						<div class="row">
-							<div class="col-md-6 col-md-offset-3">
-								<a href="../logout"> <input type="button" value="Logout"
-									class="btn btn-primary btn-block btn-lg" tabindex="7" />
-								</a>
-							</div>
+					<hr class="colorgraph" />
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3">
+							<a href="/logout"> <input type="button" value="Logout"
+								class="btn btn-primary btn-block btn-lg" tabindex="7" />
+							</a>
 						</div>
 					</div>
 				</div>
-			</form>
+			</div>
 		</div>
 	</div>
 
