--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -97,7 +97,7 @@
 							class="fa fa-user fa-fw"></i><span>ACCOUNT</span><strong
 							class="caret"></strong></a>
 						<ul class="dropdown-menu">
-							<li><a href="userProfile" style="color: black;"><i
+						<li><a th:href="@{/users/userProfile/} + ${#authentication.principal.userId}" style="color: black;"><i
 									class="fa fa-user fa-fw"></i>View Profile<br /> [<small
 									sec:authentication="name">[email]</small>] </a></li>
 							<li class="divider"></li>
